--- a/src/timeline.css
+++ b/src/timeline.css
@@ -275,10 +275,10 @@
 /* Card Image */
 .card-image {
     width: 100%;
-    height: 200px;
+    /* height: 100%; */
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    /* justify-content: center; */
     position: relative;
     border-radius: 12px;
     margin-bottom: 1rem;
@@ -286,15 +286,17 @@
 }
 
 .card-image img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 170px;
+    width: auto;
+    height: auto;
     object-fit: contain;
     transition: all 0.3s ease;
-    border-radius: 12px;
+    /* border-radius: 12px; */
 }
 
 .timeline-card:hover .card-image img {
-    filter: brightness(1.2) drop-shadow(0 0 20px rgba(255, 255, 255, 0.8));
+    filter: brightness(1.05) drop-shadow(0 0 20px rgba(255, 255, 255, 0.8));
 }
 
 /* Card Content */
@@ -399,8 +401,14 @@
     font-size: 1rem;
     color: rgba(255, 255, 255, 0.8);
     line-height: 1.3;
-    max-width: 750px;
+    max-width: 700px;
     margin: 0 auto 1.5rem;
+}
+
+.footer-description .highlight {
+    color: #e0ff2ee3;
+    font-weight: 900;
+    font-style: italic;
 }
 
 /* ===== TIMELINE RESPONSIVE DESIGN ===== */
