--- a/src/timeline.css
+++ b/src/timeline.css
@@ -234,7 +234,7 @@
     min-width: 250px;
     width: 100%;
     margin: 0 auto;
-    background: rgba(255, 255, 255, 0.02);
+    /* background: rgba(255, 255, 255, 0.02); */
     border: none;
     border-radius: 12px;
     padding: 1.5rem;
@@ -424,7 +424,7 @@
     }
 
     .timeline-description {
-        font-size: 0.9rem;
+        font-size: 1rem;
         /* width: %; */
     }
 
