--- a/src/timeline.css
+++ b/src/timeline.css
@@ -467,6 +467,10 @@
         max-width: none; /* Remove max-width constraint */
         padding: 0.5rem;
     }
+
+    .card-content {
+        gap: 0.05rem;
+    }
     
     .card-image img {
         max-width: 100%;
