--- a/src/timeline.css
+++ b/src/timeline.css
@@ -424,7 +424,7 @@
     }
 
     .timeline-description {
-        font-size: 1rem;
+        font-size: 0.95rem;
         max-width: none;
         /* width: %; */
     }
@@ -467,10 +467,6 @@
         max-width: none; /* Remove max-width constraint */
         padding: 0.5rem;
     }
-
-    .card-content {
-        gap: 0.05rem;
-    }
     
     .card-image img {
         max-width: 100%;
@@ -484,7 +480,11 @@
     
     .card-content {
         padding: 0;
-        gap: 0.5rem;
+        gap: 0rem;
+    }
+
+    .card-title {
+        margin-bottom: 0.5rem;
     }
 
     .footer-description {
