--- a/src/aboutme.css
+++ b/src/aboutme.css
@@ -38,6 +38,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center; /* Center when content fits */
+    background-color: blue;
 }
 
 @keyframes fadeInPage {
