--- a/src/aboutme.css
+++ b/src/aboutme.css
@@ -38,7 +38,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center; /* Center when content fits */
-    background-color: blue;
+    /* background-color: blue; */
 }
 
 @keyframes fadeInPage {
@@ -150,7 +150,7 @@
         font-size: 0.9rem;
         margin-bottom: 0.5rem;
         width: 95%;
-        background-color: red;
+        /* background-color: red; */
     }
     
     .profile-pic-nav {
@@ -161,6 +161,4 @@
     .nutshell-section {
         margin-bottom: 1.5rem;
     }
-    
-
 } 
