--- a/src/timeline.css
+++ b/src/timeline.css
@@ -216,6 +216,7 @@
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
+    background-color: blue;
 }
 
 .cards-container .timeline-card:nth-child(odd) {
