--- a/src/social-footer.css
+++ b/src/social-footer.css
@@ -60,17 +60,17 @@
 
 /* Mobile responsive */
 @media (max-width: 768px) {
-    .social-footer {
+    /* .social-footer {
         padding: 1rem 0;
     }
     
     .social-icon {
-        width: 40px;
-        height: 40px;
-    }
+        width: 32px;
+        height: 32px;
+    } */
     
     .scrollable-page .social-footer {
-        margin-top: 1rem;
+        /* margin-top: 0.5rem; */
         padding: 1rem 0 0.5rem 0;
     }
 }
