--- a/src/social-footer.css
+++ b/src/social-footer.css
@@ -16,7 +16,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 1rem 0;
+    padding: 1.5rem 0;
     text-align: center;
     z-index: 10;
     opacity: 0;
@@ -71,6 +71,7 @@
     
     .scrollable-page .social-footer {
         /* margin-top: 0.5rem; */
-        padding: 1rem 0 0.5rem 0;
+        padding: 1.5rem 0 0.5rem 0;
+        /* background-color: red; */
     }
 }
